success in media queries

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <li> Specific Device Types </li>
         </p>
     </section>
+    <section>
+        <h3> Examples of media queries </h3>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quaerat aspernatur nesciunt provident. Accusantium, ex.</p>
+    </section>
    </main>
 </body>
 </html>
